# corpus

./: manage.py  notes.md  pyproject.toml  requirements.txt  update.sh  update_zahri.sh  version2.0.md
accounts/: forms.py
docs/: 1991-2020yillar hisoboti.docx  Oila va jamiyat DATA BASE.xlsx  english_data.csv  newspaper_data 1991-2020.....tayyor.xlsx  oila va jamiyat statistika.docx  uzbek_data.csv
main_app/: admin.py  counter.py  models.py  path_converters.py  tests.py  types.py  urls.py  utils.py  validators.py  views.py
main_app/migrations/: 0001_initial.py  0002_alter_article_content.py  0002_alter_article_published_year_and_more.py  0003_article_language.py  0003_migrate_published_year_data.py  0004_article_search_vector_and_more.py  0005_remove_article_main_app_ar_search__c144b8_gin_and_more.py  0006_article_issue_number_article_published_year.py  0007_alter_article_author_alter_article_title_and_more.py  0008_alter_article_options_article_word_count_total_and_more.py  0009_rename_name_newspaper_title.py  0010_alter_newspaper_published_year.py
main_app/templates/: article_detail.html  base.html  footer.html  header.html  index.html  newspaper_detail.html  search.html  search_new.html  upload.html  year_archive.html
main_app/templatetags/: custom_tags.py
templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  (+5 more)
uzAnalytica/: asgi.py  settings.py  urls.py  wsgi.py
(+10 files in other folders)
