[project]
name = "zahri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-allauth>=65.14.3",
    "gunicorn>=25.1.0",
    "nltk>=3.9.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]
